debugコードを追加

--- a/.github/workflows/release-label-checker.yml
+++ b/.github/workflows/release-label-checker.yml
@@ -38,6 +38,9 @@ jobs:
 
           echo "label_found=$LABEL_FOUND" >> $GITHUB_OUTPUT
           echo $LABEL_FOUND
+      - name: Debug output
+        run: |
+          echo "Label found: ${{ steps.check-label.outputs.label_found }}"
       - name: Comment if no label
         if: steps.check-label.outputs.label_found == false
         run: |
