--- a/.github/workflows/release-label-checker.yml
+++ b/.github/workflows/release-label-checker.yml
@@ -44,5 +44,6 @@ jobs:
       - name: Comment if no label
         if: steps.check-label.outputs.label_found == false
         run: |
+          echo "Label found: ${{ steps.check-label.outputs.label_found == false }}"
           gh pr comment $NUMBER --body-file ".github/release-type.md" --repo ${{ github.repository }}
           exit 1
