トリガーにラベルの付け外しを追加

--- a/.github/workflows/release-label-checker.yml
+++ b/.github/workflows/release-label-checker.yml
@@ -2,7 +2,7 @@ name: Release Label Checker
 
 on:
   pull_request:
-    types: [edited]
+    types: [edited, labeled, unlabeled]
 jobs:
   commented-auto-labeler:
     permissions:
