--- a/.github/workflows/release-label-checker.yml
+++ b/.github/workflows/release-label-checker.yml
@@ -23,6 +23,7 @@ jobs:
           echo "approve_count=$APPROVALS" >> $GITHUB_OUTPUT
       - name: Check labels
         id: check-label
+        if: steps.approval-check.outputs.approve_count >= 2
         run: |
           REQUIRED_LABELS=("feature" "enhancement" "fix" "bugfix" "bug" "accessibility" "test" "refactoring" "other")
           PR_LABELS=$(gh pr view ${{ github.event.pull_request.number }} --repo ${{ github.repository }} --json labels --jq '.labels[].name')
@@ -39,7 +40,7 @@ jobs:
           echo "label_found=$LABEL_FOUND" >> $GITHUB_OUTPUT
           echo $LABEL_FOUND
       - name: Comment if no label
-        if: steps.check-label.outputs.label_found == 'false'
+        if: steps.approval-check.outputs.approve_count >= 2 && steps.check-label.outputs.label_found == 'false'
         run: |
           gh pr comment $NUMBER --body-file ".github/release-type.md" --repo ${{ github.repository }}
           exit 1
