--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -13,7 +13,11 @@ jobs:
     steps:
       - name: Get current date
         id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d %H:%M')"
+        run: |
+          # JSTの日付を取得
+          export TZ=JST-9
+          DATETIME=$(date +"%Y%m%d %H:%M")
+          echo "date=$DATETIME" >> $GITHUB_OUTPUT
       - uses: release-drafter/release-drafter@v6.0.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
