--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -24,5 +24,5 @@ jobs:
         with:
           commitish: develop
           config-name: release-type.yml
-          tag: "${{ steps.date.outputs.date }}"
+          tag: ${{ steps.date.outputs.date }}
           name: ${{ steps.date.outputs.date }}
